[gd_scene load_steps=7 format=3 uid="uid://c4noh2qbau26y"]

[ext_resource type="Script" uid="uid://bhgsl0eetnq7c" path="res://mothership/mothership.gd" id="1_4w4qf"]
[ext_resource type="Texture2D" uid="uid://ckuub02jehr8k" path="res://assets/graphics/mothership.png" id="2_uiimd"]
[ext_resource type="Texture2D" uid="uid://bum41lvakrfbu" path="res://assets/graphics/bubble.png" id="2_xkhlg"]
[ext_resource type="Script" uid="uid://dras6lto8o4ug" path="res://mothership/storage.gd" id="3_8e73m"]
[ext_resource type="PackedScene" uid="uid://ckgaf5gu5p2qj" path="res://player/player.tscn" id="4_ylwwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_piqk5"]
size = Vector2(218, 79)

[node name="Base" type="Node2D"]
script = ExtResource("1_4w4qf")

[node name="BubbleVfx" type="CPUParticles2D" parent="."]
position = Vector2(-189.22, -55.11)
amount = 200
texture = ExtResource("2_xkhlg")
lifetime = 10.0
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(5, 15)
direction = Vector2(-1, 0)
spread = 30.15
gravity = Vector2(0, -60)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
damping_min = 40.0
damping_max = 40.0
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="BubbleVfx2" type="CPUParticles2D" parent="."]
position = Vector2(-114.085, -22.17)
amount = 50
texture = ExtResource("2_xkhlg")
lifetime = 10.0
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(5, 15)
direction = Vector2(-1, 0)
spread = 30.15
gravity = Vector2(0, -60)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
damping_min = 40.0
damping_max = 40.0
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="BubbleVfx3" type="CPUParticles2D" parent="."]
position = Vector2(-63.165, -122.655)
amount = 50
texture = ExtResource("2_xkhlg")
lifetime = 10.0
lifetime_randomness = 0.2
emission_shape = 3
emission_rect_extents = Vector2(5, 15)
direction = Vector2(-1, 0)
spread = 30.15
gravity = Vector2(0, -60)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
damping_min = 40.0
damping_max = 40.0
scale_amount_min = 0.1
scale_amount_max = 0.2

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.382, 0.382)
texture = ExtResource("2_uiimd")
offset = Vector2(-157.655, -201.545)
flip_h = true

[node name="DockingArea" type="Area2D" parent="."]
position = Vector2(0, -256)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DockingArea"]
position = Vector2(0, 229.5)
shape = SubResource("RectangleShape2D_piqk5")

[node name="Storage" type="Node" parent="."]
script = ExtResource("3_8e73m")

[node name="DockingMarker" type="Marker2D" parent="."]
position = Vector2(2, -6)

[node name="Player" parent="." instance=ExtResource("4_ylwwb")]
position = Vector2(2, -6)
